--- a/index.html
+++ b/index.html
@@ -39,26 +39,16 @@
           </button>
           <a class="navbar-brand" href="#">PhoneSat Parser</a>
         </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
       </div>
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <h2>Parse those packets!</h2>
+        <p>This site lets you upload and parse packets received from <a href="http://phonesat.org/">PhoneSat</a> satellites such as <a href="http://kicksat.net/">KickSat</a> and <a href="http://phonesat.org/">PhoneSat</a> itself.</p>
+        <p>This project is unaffiliated with the folks involved with PhoneSat or KickSat.  It was created by using the <a href="http://phonesat.org/packet_description_files/WebReadyViewIndicator.aspx.html">PhoneSat packet description</a>.</p>
+        <p>We encourage you to submit any packets you find, including the raw data, to the appropriate project team.  This site is just for your convenience, so you can interpret the data you have received.</p>
       </div>
     </div>
 
@@ -85,9 +75,9 @@
       <hr>
 
       <footer>
-        <p>&copy; Sam Reisner 2014</p>
-        <p><a href="http://www.gnu.org/licenses/gpl-2.0.html">Licensed under GPLv2</a></p>
-        <p><a href="https://github.com/samreisner/phonesat-parser/">Available on GitHub</a></p>
+        <p>&copy; Sam Reisner 2014<br />
+        <a href="http://www.gnu.org/licenses/gpl-2.0.html">Licensed under GPLv2</a><br />
+        <a href="https://github.com/samreisner/phonesat-parser/">Available on GitHub</a></p>
       </footer>
     </div> <!-- /container -->
 
