--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div class="col-md-12">
           <h4>Raw packet:</h4>
           <form>
-          	<textarea name="rawpacket" id="rawpacket">P4C,800,0,0,0,sdfsf</textarea>
+<!--          	<textarea name="rawpacket" id="rawpacket">P4C,823,0,59,0,TÖ©‰„Ž–ŽÀå[gÐ •p‘.¦™TŒ¹Ý?   •Ä 2Ÿþb¾Ž{    r ü¿!È            £Ö¦å¤º@Ý¤º£t¡Ý¤º</textarea>
+-->          	<textarea name="rawpacket" id="rawpacket">P4C,704,0,468,0,U‰ñ NŠ[Š2Š°Ša @ Q _ g‰¥ 1 + ñ þŒÕ…÷ˆ,ëm·L í ë‘Ã ðƒÐ Ÿ‚^€•}à~ñ ¦ ¸ æ ÇŽH Ú    (hdÉ4@"|ýÕDÐ      ˜±</textarea>
           </form>
           <p><a class="btn btn-default" href="#" id="parsepacketbutton" role="button">Parse &raquo;</a></p>
         </div>
@@ -70,6 +71,60 @@
           <p id="results"></p>
         </div>
       </div>
+
+		<div class="row" style="display: none;">
+			<div class="col-md-12">
+			<pre style="">
+battery_volt	770
+mag_bef_x	-849.79211
+gyro_bef_x	6.02252
+magP_actHI_x	1.85166
+magP_actMed_x	-425.78206
+magN_actHI_x	-427.41471
+magN_actMed_x	-421.68054
+gyroP_actHI_x	5.76582
+gyroP_actMed_x	-8.26348
+gyroN_actHI_x	0.02591
+gyroN_actMed_x	9.01844
+mag_aft_x	-555.47785
+gyro_aft_x	0.05062
+mag_bef_y	450.47085
+gyro_bef_y	-7.30842
+magP_actHI_y	451.30709
+magP_actMed_y	450.47085
+magN_actHI_y	-840.91211
+magN_actMed_y	-8.46188
+gyroP_actHI_y	9.01844
+gyroP_actMed_y	9.22332
+gyroN_actHI_y	9.01764
+gyroN_actMed_y	9.23368
+mag_aft_y	-546.51821
+gyro_aft_y	0.89806
+mag_bef_z	460.94368
+gyro_bef_z	9.18904
+magP_actHI_z	-885.47139
+magP_actMed_z	243.92126
+magN_actHI_z	452.02386
+magN_actMed_z	-600.07695
+gyroP_actHI_z	0.13034
+gyroP_actMed_z	5.30822
+gyroN_actHI_z	0.13034
+gyroN_actMed_z	4.81555
+mag_aft_z	458.873
+gyro_aft_z	9.01844
+i_MHX	747.36598
+i_ADCS	742.18726
+i_solarXp	746.71354
+i_solarXn	742.1261
+i_solarYp	401.77854
+i_solarYn	286.46039
+i_solarZp	639.42852
+i_solarZn	428.05949
+			
+			</pre>
+			</div>
+		</div>
+		
       <hr>
 
       <footer>
