last of the binary processing, switching to ascii/decimal next

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h4>Raw packet:</h4>
           <form>
 <!--          	<textarea name="rawpacket" id="rawpacket">P4C,823,0,59,0,TÖ©‰„Ž–ŽÀå[gÐ •p‘.¦™TŒ¹Ý?   •Ä 2Ÿþb¾Ž{    r ü¿!È            £Ö¦å¤º@Ý¤º£t¡Ý¤º</textarea>
--->          	<textarea name="rawpacket" id="rawpacket">P4C,704,0,468,0,U‰ñ NŠ[Š2Š°Ša @ Q _ g‰¥ 1 + ñ þŒÕ…÷ˆ,ëm·L í ë‘Ã ðƒÐ Ÿ‚^€•}à~ñ ¦ ¸ æ ÇŽH Ú    (hdÉ4@"|ýÕDÐ      ˜±</textarea>
+-->          	<textarea name="rawpacket" id="rawpacket">P4C,703,0,468,0,UñN[2°a@Q_g¥1+ñþÕ÷,ëm·LíëÃðÐ^}à~ñ¦¸æÇHÚ    (hdÉ4@"|ýÕDÐ      ±        </textarea>
           </form>
           <p><a class="btn btn-default" href="#" id="parsepacketbutton" role="button">Parse &raquo;</a></p>
         </div>
