stretched input box

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
         <div class="col-md-12">
           <h4>Raw packet:</h4>
           <form>
-          	<textarea name="rawpacket" id="rawpacket"></textarea>
-          </form>
+          	<textarea name="rawpacket" id="rawpacket" class="col-md-12"></textarea>
           <p><a class="btn btn-default" href="#" id="parsepacketbutton" role="button">Parse &raquo;</a></p>
+          </form>
+
         </div>
       </div>
       
