hide results until results are available

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       
     <div class="container" id = "warnings" style="display: none; color: red;">
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row" >
         <div class="col-md-12" id="warningmessages">
 		</div>
 	  </div>
 	</div>
       
-      <div class="row">
+      <div class="row" style="display: none;" id="theresultsrow">
         <div class="col-md-12">
           <h4>Results:</h4>
           <p><pre id="results"></pre></p>
