allow for selection of kicksat/phonesat

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
           <h4>Raw packet:</h4>
           <form>
           	<textarea name="rawpacket" id="rawpacket" class="col-md-12"></textarea>
+          	<label class="radio-inline">
+			  <input type="radio" id="inlineCheckbox1" name="satelliteName" value="KickSat" checked> KickSat
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" id="inlineCheckbox2"  name="satelliteName" value="PhoneSat"> PhoneSat
+			</label>
+
           <p><a class="btn btn-default" href="#" id="parsepacketbutton" role="button">Parse &raquo;</a></p>
           </form>
 
@@ -97,9 +104,9 @@
       <hr>
 
       <footer>
-        <p>&copy; Sam Reisner 2014<br />
-        <a href="http://www.gnu.org/licenses/gpl-2.0.html">Licensed under GPLv2</a><br />
-        <a href="https://github.com/samreisner/phonesat-parser/">Available on GitHub</a></p>
+        <p><a href='http://samreisner.com/'>&copy; Sam Reisner 2014</a><br />
+       Licensed under <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPLv2</a><br />
+        Available on <a href="https://github.com/samreisner/phonesat-parser/">GitHub</a></p>
       </footer>
     </div> <!-- /container -->
 
