better warnings for unimplemented packet types

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-12">
-          <h4>Raw packet:</h4>
+          <h4>Packet Data:</h4>
+          <p>Please enter either the hex data or the ASCII string for the packet, and select the satellite type</p>
           <form>
           	<textarea name="rawpacket" id="rawpacket" class="col-md-12"></textarea>
           	<label class="radio-inline">
@@ -87,6 +88,9 @@
     <div class="container" id = "warnings" style="display: none; color: red;">
       <!-- Example row of columns -->
       <div class="row" >
+        <div class="col-md-12">
+			<h3>Warnings:</h3>
+		</div>      	
         <div class="col-md-12" id="warningmessages">
 		</div>
 	  </div>
