--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <div class=".col-md-6 .col-md-offset-3">
           <h4>Results:</h4>
           <p><pre id="results"></pre></p>
+          <h6>Web Parser v.3</h6>
         </div>
       </div>
 
