updated phonesat doc link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <h2>Parse those packets!</h2>
         <p>This site lets you upload and parse packets received from <a href="http://phonesat.org/">PhoneSat</a> satellites such as <a href="http://kicksat.net/">KickSat</a> and <a href="http://phonesat.org/">PhoneSat</a> itself.</p>
-        <p>This project is unaffiliated with the folks involved with PhoneSat or KickSat.  It was created by using the <a href="http://phonesat.org/packet_description_files/WebReadyViewIndicator.aspx.html">PhoneSat packet description</a>.</p>
+        <p>This project is unaffiliated with the folks involved with PhoneSat or KickSat.  It was created by using the <a href="http://www.phonesat.org/packet_description.php">PhoneSat packet description</a>.</p>
         <p>We encourage you to submit any packets you find, including the raw data, to the appropriate project team.  This site is just for your convenience, so you can interpret the data you have received.</p>
       </div>
     </div>
